PHORONIX TEST SUITE CHANGE-LOG

Phoronix Test Suite (Git)

pts-core: Show unit/scale in CSV export
pts-core: When limiting results to show in result viewer, keep child objects that match the desired type for the parent
linux_perf: Reporting many more events
pts-core: External dependency updates
pts_Graph: graph code tweaks
phodevi: Sway compositor version detection
phodevi: Detection of newer Arm CPU cores

Phoronix Test Suite 9.6.0
21 April 2020

pts-core: Allow building virtual suites off external dependencies
pts-core: Various result viewer improvements
pts-core: Allow saving results under stress-run
pts-core: Responsive/mobile result viewer improvements
pts-core: Show local tests within the build-suite sub-command
pts-core: Show local suites within the list-installed-suites sub-command
pts_Graph: Restore capability for drawing mini graphs for all results in a result file overview

Phoronix Test Suite 9.6.0 Milestone 3
12 April 2020

pts-core: Allow automated per-thread/core/clock/RAM graphs within the result viewer
pts-core: Result viewer add "Limit displaying results to tests within:"
pts-core: From the result viewer allow "Show Geometric Means Per-Suite/Category"
pts-core: Add workload-topology sub-command
pts-core: Allow adding deprecated tests to build-suite
pts-core: CSV export improvements
pts-core: Add "Do Not Show Results With Incomplete Data" to the result viewer
pts-core: Allow test suite "Status" tag
pts-core: Don't report OB updates on deprecated tests or suites

Phoronix Test Suite 9.6.0 Milestone 2
5 April 2020

pts-core: Documentation updates
pts-core: External dependency updates
pts-core: Allow listing test profiles within the result viewer
pts-core: Allow listing test suites and test suite data within the result viewer
pts-core: Allow showing test profile information within the result viewer
pts-core: Various other updates to the result viewer
pts-core: Add vaapi as possible external dependency
update_checker: Add message of the day support
